# 100x-Productivity-Analyzer

./: .env.example  .env.template  .gitignore  .replit  README.md  SEMANTIC_INTEGRATION_SUMMARY.md  SETUP_GUIDE.md  main.py  pyproject.toml  replit.nix  requirements.txt  run.sh  run_agent.py  run_dashboard.sh  setup.py  simple_agent.py
dashboard-ui/: index.html  run_dashboard.py  script-update.js  script.js  styles-update.css  styles.css
src/: __init__.py  config.py
src/analytics/: productivity_scorer.py
src/integrations/: composio_manager.py  fallback_manager.py
src/reports/: summary_generator.py
src/semantic/: __init__.py  indexer.py  simple_indexer.py
src/utils/: __init__.py  ascii_art.py  json_encoder.py  logger.py
