[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "100x-productivity-analyzer"
version = "1.0.0"
description = "A comprehensive productivity analysis tool for engineering teams"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
requests = "^2.25.0"
aiohttp = "^3.8.0"
schedule = "^1.1.0"
typing-extensions = "^4.0.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
pydantic = "^2.0.0"
scikit-learn = "^1.0.0"
rich = "^13.0.0"
colorama = "^0.4.4"
tabulate = "^0.8.0"
requests-oauthlib = "^1.3.0"
PyYAML = "^6.0"
click = "^8.0.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88